# diogenes-v2

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: attacks.rs  bitboard.rs  board.rs  castling.rs  color.rs  direction.rs  error.rs  fen.rs  lib.rs  main.rs  move.rs  piece.rs  position.rs  square.rs  types.rs
