[package]
name = "diogenes"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
arrayvec = "0.7"
bitfield-struct = "0.10.1"
num-derive = "0.4"
num-traits = "0.2"
rand = "0.8"
strum = { version = "0.27.1", features = ["derive", "phf", "strum_macros"] }
thiserror = "2.0.11"

[dev-dependencies]
rstest = "0.25.0"
