[package]
name = "diogenes"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
arbitrary-int = "1.3.0"
bitbybit = "1.3.3"
num-derive = "0.4"
num-traits = "0.2"
strum = { version = "0.27.1", features = ["derive", "phf", "strum_macros"] }
thiserror = "2.0.11"

[dev-dependencies]
rand = "0.8"
rstest = "0.25.0"
